...
            "state": "translated",
            "value": "Remover"
          }
        }
      }
    },
    "Entsperren": {
      "extractionState": "extracted_with_value",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Unlock"
...
            "state": "translated",
            "value": "Sem acesso ao microfone"
          }
        }
      }
    },
    "Keine Anfragen": {
      "extractionState": "extracted_with_value",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "No Requests"
...
            "state": "translated",
            "value": "Contato apagado"
          }
        }
      }
    },
    "Kontaktanfragen": {
      "extractionState": "extracted_with_value",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Contact Requests"
...
            "state": "translated",
            "value": "Após ver"
          }
        }
      }
    },
    "Nach dem Ansehen löschen": {
      "extractionState": "extracted_with_value",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete After Viewing"
...
            "state": "translated",
            "value": "Mensagens que desaparecem"
          }
        }
      }
    },
    "Nachrichtenoptionen": {
      "extractionState": "extracted_with_value",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Message Options"
...
            "state": "translated",
            "value": "Opções de reenvio"
          }
        }
      }
    },
    "Passwort": {
      "extractionState": "extracted_with_value",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Password"
...
